--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#14001f" />
 
   <title>MiOlistico – Centro Olistico a Roma | Fisioterapia, Osteopatia, Psicologia, Massaggi</title>
-  <meta name="description" content="MiOlistico è un centro olistico a Roma (zona Tuscolana/Numidio Quadrato) con approccio integrato: fisioterapia, osteopatia, supporto psicologico, mindfulness, massaggi olistici e naturopatia. Prenota una consulenza." />
+  <meta name="description" content="MiOlistico è il centro integrato corpo-mente a Roma (Tuscolana/Numidio Quadrato): fisioterapia, osteopatia, supporto psicologico e massaggi in un unico percorso coordinato. Prenota una consulenza." />
   <meta name="robots" content="index,follow" />
   <link rel="canonical" href="https://miolistico.it/" />
   <meta property="og:url" content="https://miolistico.it/" />
@@ -528,10 +528,9 @@
     <section class="hero anchor" id="home">
       <div class="container">
         <div class="kicker"><span class="dot"></span> Zona Tuscolana · Numidio Quadrato · Roma</div>
-        <h1>Benessere integrato per corpo e mente</h1>
+        <h1>Il centro integrato corpo‑mente a Roma</h1>
         <p>
-          MiOlistico è un centro olistico a Roma dove professionisti della salute e del benessere lavorano insieme
-          per accompagnarti verso equilibrio, energia e qualità della vita, con un approccio professionale ed empatico.
+          MiOlistico è il centro integrato corpo‑mente a Roma dove professionisti della salute collaborano in modo coordinato. Uniamo fisioterapia, osteopatia, supporto psicologico e trattamenti olistici per intervenire sulle cause – non solo sui sintomi – e costruire un percorso coerente, personalizzato e sostenibile.
         </p>
 
         <div class="btnRow">
@@ -587,11 +586,9 @@
       <div class="container">
         <div class="panel">
           <div class="kicker"><span class="dot"></span> Servizi</div>
-          <h2>Percorsi professionali per il tuo benessere</h2>
+          <h2>Un unico percorso integrato, più professionisti, una sola direzione</h2>
           <p>
-            Ogni servizio nasce da una visione integrata: non trattiamo solo il sintomo,
-            ma la persona nella sua globalità. Lavoriamo su dolore, postura, emozioni,
-            stress, energia e stile di vita, costruendo interventi coerenti e sostenibili.
+            Ogni intervento è parte di un disegno più ampio: valutiamo insieme come corpo, postura, emozioni e abitudini si influenzano tra loro. Questo ci permette di creare un piano integrato in cui i professionisti collaborano, evitando interventi frammentati e migliorando l’efficacia nel tempo.
           </p>
 
           <div class="services" aria-label="Servizi">
@@ -668,18 +665,22 @@
       <div class="container">
         <div class="panel">
           <div class="kicker"><span class="dot"></span> Ambienti</div>
-          <h2>Uno spazio luminoso, ordinato, riservato</h2>
-          <p>Un ambiente semplice e curato, pensato per farti sentire a tuo agio fin dal primo minuto.</p>
+          <h2>Uno spazio che riflette il nostro metodo integrato</h2>
+          <p>Ogni ambiente è progettato per sostenere il percorso corpo‑mente: luce naturale, ordine, riservatezza e materiali che favoriscono calma e concentrazione. Lo spazio non è solo contesto, ma parte attiva del processo di cura.</p>
 
           <div class="gallery" aria-label="Foto del centro MiOlistico">
-            <div class="panel" style="box-shadow:none; background: rgba(0,0,0,.10)">
-              <h3 style="margin-bottom:8px">Cosa troverai</h3>
-              <p style="margin-bottom:10px">Accoglienza, privacy e attenzione. Se vuoi, puoi prenotare una breve visita orientativa: ti aiutiamo a scegliere il servizio più adatto.</p>
-              <div class="btnRow" style="justify-content:flex-start; margin-top: 10px">
+            <div class="panel" style="box-shadow:none; background: rgba(0,0,0,.10); display:flex; flex-direction:column; justify-content:center">
+              <h3 style="margin-bottom:10px">Esperienza e atmosfera</h3>
+              <p style="margin-bottom:14px">Ambienti luminosi e riservati dove ogni professionista può lavorare in modo coordinato. Qui il paziente non si sente "in visita", ma accompagnato in un percorso.</p>
+              <ul style="margin:0 0 14px 18px; opacity:.85">
+                <li>Sale dedicate ai trattamenti manuali</li>
+                <li>Area movimento per riabilitazione e postura</li>
+                <li>Spazi riservati per colloqui psicologici</li>
+              </ul>
+              <div class="btnRow" style="justify-content:flex-start; margin-top: 6px">
                 <a class="cta" href="#contatti">Prenota una visita</a>
-                <a class="btn" href="#contatti">Chiedi informazioni</a>
+                <a class="btn" href="#servizi">Scopri il metodo</a>
               </div>
-              <p class="help" style="margin-top:10px">Per la pubblicazione: salva le 3 immagini nella cartella <strong>assets</strong> con questi nomi ottimizzati SEO: <em>miolistico-roma-area-movimento.webp</em>, <em>miolistico-roma-sala-accoglienza.webp</em>, <em>miolistico-roma-spazi-riservati.webp</em>.</p>
             </div>
 
             <div class="shots">
@@ -827,6 +828,11 @@
                   <label for="service">Servizio</label>
                   <select id="service" name="service" required>
                     <option value="" selected disabled>Seleziona…</option>
+                    <option>Fisioterapia</option>
+                    <option>Osteopatia</option>
+                    <option>Psicologia</option>
+                    <option>Nutrizione</option>
+                    <option>Trattamenti manuali</option>
                   </select>
                 </div>
                 <div>
